# plan-search-chatbot

./: .gitignore  CONTRIBUTING.md  README.md  test.http  test_sk.http
.github/workflows/: ci-cd-setup.md  ci-cd.yml
app/backend/: .dockerignore  .env.example  DOCKERFILE  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
app/backend/config/: config.py
app/backend/evals/: batch_eval.py
app/backend/evals/data/: RTF_queries.csv
app/backend/evals/results/: evaluation_report_20250710_161811.html  generated_results_2025-07-10_161730.jsonl
app/backend/i18n/: __init__.py  locale_msg.py
app/backend/model/: models.py
app/backend/prompts/: answer_prompt.yaml  general_answer_prompt.yaml  general_planner_prompt.yaml  intent_analyze_prompt.yaml  intent_analyze_prompt_ko.yaml  planner_prompt.yaml  product_answer_prompt.yaml  product_planner_prompt.yaml  query_rewrite_prompt.yaml  rewrite_plan_prompt_en.yaml  rewrite_plan_prompt_ko.yaml
app/backend/services/: bing_grounding_search.py  orchestrator.py  plan_executor.py  query_rewriter.py  search_crawler.py
app/backend/services_sk/: corp_plugin.py  dart_plugin.py  grounding_plugin.py  intent_plan_plugin.py  plan_search_executor_sk.py  plan_search_executor_sk_parallel.py  search_plugin.py  youtube_mcp_plugin.py  youtube_plugin.py
app/backend/tests/: conftest.py  test_integration.py  test_orchestrator.py  test_plan_executor.py  test_query_rewriter_integration.py
app/backend/utils/: enum.py
app/frontend/: Dockerfile  README.md  pyproject.toml  run_app.sh  run_chainlit.sh
app/frontend/.chainlit/: config.toml
app/frontend/public/: manifest.json
app/frontend/src/: app.py  app_chainlit.py
app/frontend/src/i18n/: locale_msg_front.py
infra/: backend-env.json.example  deploy.sh  main.bicep  main.parameters.json.example
